--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="app">
       <h1>App Starter</h1>
+      <img src="images/logo.png" width="100" height="100" alt="logo" />
     </div>
     <script src="/bundle.js"></script>
   </body>
